[Add] New components added for score tables and private groups

--- a/WCO_WEB/WCO/src/app/components/navbar/navbar.component.html
+++ b/WCO_WEB/WCO/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,22 @@
           <span class="navbar-toggler-icon"></span>
       </button>
 
-
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+              <a  class="nav-link active fontform" aria-current="page" href="#" routerLink="/scores" style="color: white;" >
+                  <img src="../../../assets/images/score.png" width="30" alt="" class="d-inline-block align-middle mr-2" >
+                  Puntuaciones
+              </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link active fontform" aria-current="page" href="#" routerLink="/groups" style="color: white;">
+                  <img src="../../../assets/images/group.png" width="28" alt="" class="d-inline-block align-middle mr-2">
+                  Grupos Privados
+              </a>
+          </li>
+        </ul>
+      </div>
 
 
       <ul class="nav navbar-nav navbar-right">
