--- a/WCO_WEB/WCO/src/app/components/create-match/create-match.component.css
+++ b/WCO_WEB/WCO/src/app/components/create-match/create-match.component.css
@@ -112,3 +112,8 @@ form .button{
   background: #F44336;
   color: white;
 }
+
+::ng-deep snack-bar-container.green-snackbar {
+  background: rgb(15, 206, 15);
+  color: white;
+}
