--- a/WCO_WEB/WCO/src/app/components/create-tournament/create-tournament.component.css
+++ b/WCO_WEB/WCO/src/app/components/create-tournament/create-tournament.component.css
@@ -194,7 +194,10 @@ form .input-box2 span.details{
   background: #F44336;
   color: white;
 }
-
+::ng-deep snack-bar-container.green-snackbar {
+  background: rgb(15, 206, 15);
+  color: white;
+}
 
 
 
