--- a/WCO_WEB/WCO/src/app/components/tournament-details/tournament-details.component.html
+++ b/WCO_WEB/WCO/src/app/components/tournament-details/tournament-details.component.html
@@ -27,9 +27,9 @@
           </ng-template>
           <ng-template  ngbPanelContent>
             <div *ngFor="let match of bracket">
-              <span (click)="viewMatch(match.mId)">{{match.teams[0].name}} &nbsp;&nbsp;&nbsp;&nbsp; VS&nbsp;&nbsp;&nbsp;&nbsp; {{match.teams[1].name}}&nbsp;&nbsp;&nbsp;&nbsp;  Sede: {{match.venue}} &nbsp;&nbsp;&nbsp;&nbsp;Horario: {{match.date}} a las {{match.startTime}}</span>
+              <span (click)="viewMatch(match.mId)" routerLink="/match-details">{{match.teams[0].name}} &nbsp;&nbsp;&nbsp;&nbsp; VS&nbsp;&nbsp;&nbsp;&nbsp; {{match.teams[1].name}}&nbsp;&nbsp;&nbsp;&nbsp;  Sede: {{match.venue}} &nbsp;&nbsp;&nbsp;&nbsp;Horario: {{match.date}} a las {{match.startTime}}</span>
             </div>
-            <input *ngIf="scope === 'admin'" class="create-match-btn" type="button"  value="+ Agregar Partido" (click)="redirectMatch(bracketsData[i])">
+            <input *ngIf="scope === 'admin'" class="create-match-btn" type="button"  value="+ Agregar Partido" (click)="redirectMatch(bracketsData[i])" routerLink="/create-match">
           </ng-template>
         </ngb-panel>
       </ngb-accordion>
