--- a/WCO_WEB/WCO/src/app/components/login/login.component.html
+++ b/WCO_WEB/WCO/src/app/components/login/login.component.html
@@ -17,19 +17,19 @@
           <div class="account-details">
             <div class="input-box">
               <span class="details">Correo Electrónico<span style="color: rgb(245, 59, 59);">*</span> </span>
-              <input type="email" [(ngModel)]= "newLogin.email" [ngModelOptions]="{standalone: true}"  maxlength="30" placeholder="Ingrese un correo electrónico.." required>
+              <input type="email" [(ngModel)]= "newLogin.email" [ngModelOptions]="{standalone: true}"  maxlength="30" placeholder="Ingrese un correo electrónico.." id="emailInput" required>
             </div>
 
             <div class="input-box">
               <span class="details">Contraseña<span style="color: rgb(245, 59, 59);">*</span> </span>
-              <input type="password" [(ngModel)]= "newLogin.password" [ngModelOptions]="{standalone: true}" minlength="6" maxlength="8" placeholder="Ingrese una contraseña aquí..." required>
+              <input type="password" [(ngModel)]= "newLogin.password" [ngModelOptions]="{standalone: true}" minlength="6" maxlength="8" placeholder="Ingrese una contraseña aquí..." id="passwordInput" required>
             </div>
             <div class="input-box">
               <span >No tienes una cuenta aún? Regístrate <a routerLink="/register" style="color: rgb(4, 0, 255);">aquí</a></span>
             </div>
           </div>
           <div class="button">
-            <input type="submit" value="Iniciar Sesión" (click)="addLogin()">
+            <input type="submit" value="Iniciar Sesión" (click)="addLogin()" data-test="btn-login">
           </div>
 
         </form>
