--- a/WCO_WEB/WCO/src/app/components/navbar/navbar.component.html
+++ b/WCO_WEB/WCO/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <nav class="navbar navbar-expand-lg navbar-light my-navbar ">
       <div class="container-fluid">
-      <a class="navbar-brand fontform" href="#" routerLink= "/home" >
+      <a id="logoElement" class="navbar-brand fontform" href="#" routerLink= "/home" >
           <img src="../../../assets/images/wco-logo.png" width="120" alt="" class="d-inline-block align-middle mr-2"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -10,13 +10,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-              <a  class="nav-link active fontform" aria-current="page" href="#" routerLink="/scores" style="color: white;" >
+              <a  id="scoreElement" class="nav-link active fontform" aria-current="page" href="#" routerLink="/scores" style="color: white;" >
                   <img src="../../../assets/images/score.png" width="30" alt="" class="d-inline-block align-middle mr-2" >
                   Puntuaciones
               </a>
           </li>
           <li class="nav-item">
-              <a class="nav-link active fontform" aria-current="page" href="#" routerLink="/groups" style="color: white;">
+              <a id="groupElement" class="nav-link active fontform" aria-current="page" href="#" routerLink="/groups" style="color: white;">
                   <img src="../../../assets/images/group.png" width="28" alt="" class="d-inline-block align-middle mr-2">
                   Grupos Privados
               </a>
@@ -26,7 +26,7 @@
 
 
       <ul class="nav navbar-nav navbar-right">
-        <li><img  class="pull-right" src="../../../assets/images/logout.png" routerLink="/login"  width="35" alt="" class="d-inline-block align-middle mr-2"></li>
+        <li><img  id="logoutElement" class="pull-right" src="../../../assets/images/logout.png" routerLink="/login"  width="35" alt="" class="d-inline-block align-middle mr-2"></li>
       </ul>
 
 
