--- a/WCO_WEB/WCO/src/app/components/create-match/create-match.component.html
+++ b/WCO_WEB/WCO/src/app/components/create-match/create-match.component.html
@@ -40,7 +40,7 @@
         </div>
         </div>
         <div class="button">
-          <input type="submit" value="Agregar Partido" (click)="insertMatch()" routerLink="/tournament-details" >
+          <input type="submit" value="Agregar Partido" (click)="insertMatch()">
         </div>
       </form>
     </div>
