--- a/WCO_WEB/WCO/src/app/components/create-tournament/create-tournament.component.html
+++ b/WCO_WEB/WCO/src/app/components/create-tournament/create-tournament.component.html
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="button">
-          <input type="submit" value="Crear Torneo" (click)="addTournament()" routerLink="/home">
+          <input type="submit" value="Crear Torneo" (click)="addTournament()">
         </div>
       </form>
     </div>
