--- a/WCO_WEB/WCO/src/app/components/scores/scores.component.html
+++ b/WCO_WEB/WCO/src/app/components/scores/scores.component.html
@@ -14,12 +14,28 @@
   <br>
   <div class="input-box">
     <div class="title">Seleccione un torneo para ver la tabla de puntajes</div>
-    <mbsc-select style="margin-left: 35% ;" [data]="allTournaments" [touchUi]="false"   placeholder="Seleccione el torneo" ></mbsc-select>
-    <input type="submit" value="Ver Puntajes" >
+    <mbsc-select style="margin-left: 35% ;" [data]="allTournaments" [(ngModel)]= "currentTID" [ngModelOptions]="{standalone: true}" [touchUi]="false" placeholder="Seleccione el torneo" ></mbsc-select>
+    <input type="submit" value="Ver Puntajes" (click)="showScore()" >
   </div>
+
   <div class="container">
     <div class="content">
 
+      <span class="title">Mi Puntaje</span>
+      <table id="scores" class="table table-bordered mt-4 mytable">
+        <tr class="table-primary mytable">
+          <th>Posición</th>
+          <th>Nickname</th>
+          <th>Puntaje</th>
+        </tr>
+        <tr *ngFor="let data of allScores; index as i">
+            <td *ngIf=" i == currentUser">{{i + 1}}</td>
+            <td *ngIf=" i == currentUser">{{data.acc_nick}}</td>
+            <td *ngIf=" i == currentUser">{{data.points}} pts</td>
+        </tr>
+      </table>
+
+      <span class="title">Todos los Puntajes</span>
       <table id="scores" class="table table-bordered mt-4 mytable">
         <tr class="table-primary mytable">
           <th>Posición</th>
@@ -28,8 +44,8 @@
         </tr>
         <tr *ngFor="let data of allScores; index as i">
             <td>{{i + 1}}</td>
-            <td>{{data.nickname}}</td>
-            <td>{{data.score}} pts</td>
+            <td>{{data.acc_nick}}</td>
+            <td>{{data.points}} pts</td>
         </tr>
       </table>
     </div>
