[Update] Bug Fixed

--- a/WCO_WEB/WCO/src/app/components/groups/groups.component.html
+++ b/WCO_WEB/WCO/src/app/components/groups/groups.component.html
@@ -32,7 +32,7 @@
       <tr *ngFor="let data of groupsData">
         <td>{{data.name}}</td>
           <td>{{data.gId}}</td>
-          <td>{{data.name}}</td>
+          <td>{{data.tId}}</td>
           <td><button class="viewbtn" (click)="showGroup(data.gId)" routerLink="/group-details" >Ver Grupo</button></td>
       </tr>
       </table>
